--- a/.gitignore
+++ b/.gitignore
@@ -15,9 +15,9 @@
 *.pch
 
 # Compiled Dynamic libraries
-*.so
-*.dylib
-*.dll
+# *.so
+# *.dylib
+# *.dll
 
 # Fortran module files
 *.mod
@@ -48,13 +48,24 @@
 .mtj.tmp/
 
 # Package Files #
-*.jar
+#*.jar
 *.war
 *.nar
 *.ear
 *.zip
 *.tar.gz
 *.rar
+
+### IntelliJ ###
+
+#.idea/workspace.xml
+#.idea/usage.statistics.xml
+#.idea/tasks.xml
+#.idea/modules.xml
+#.idea/gradle.xml
+.idea/
+
+*.iml
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
@@ -156,5 +167,5 @@ gradle-app.setting
 .settings/
 bin/
 
-
+out/
 # End of https://www.gitignore.io/api/c++,java,linux,macos,gradle,windows,visualstudiocode
